# argus

./: .gitignore  Cargo.toml  README.md  TODO.md
crates/argus-examples/: Cargo.toml
crates/argus-examples/src/: main.rs
crates/dsfs/: Cargo.toml
crates/dsfs/src/: lib.rs
crates/ia-core/: Cargo.toml
crates/ia-core/src/: lib.rs
crates/ibcs/: Cargo.toml
crates/live-channel/: Cargo.toml
crates/live-channel/src/: lib.rs
crates/warp/: Cargo.toml
crates/warp/src/: config.rs  errors.rs  lib.rs  types.rs
crates/warp/src/crypto/merkle/: blake3.rs  mod.rs  parameters.rs
crates/warp/src/protocol/: batching_sumcheck.rs  mod.rs  twin_sumcheck.rs  warp.rs
crates/warp/src/relations/: description.rs  mod.rs
crates/warp/src/relations/r1cs/: mod.rs
crates/warp/src/relations/r1cs/hashchain/: config.rs  instance.rs  mod.rs  relation.rs  synthesizer.rs  witness.rs
crates/warp/src/utils/: mod.rs  poly.rs  poseidon.rs
crates/warp/tests/: warp_test.rs
docs/: iarg-interface-v1.md  iarg-interface-v2.md  iarg-interface-v3.md  interactive-reduction-v2.md  interactive-reduction.md  live-channel.md  warp.md
