[workspace]
members = [
    "crates/ia-core",
    "crates/dsfs",
    "crates/live-channel",
    "crates/ibcs",
    "crates/argus-examples",
    "crates/warp",
]
resolver = "2"

[workspace.dependencies]
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
ark-poly = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-curve25519 = "0.5.0"
ark-relations = "0.5.0"
ark-r1cs-std = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", features = ["merkle_tree", "crh", "r1cs", "sponge"] }
ark-codes = { git = "https://github.com/dmpierre/ark-codes.git" }
spongefish = { git = "https://github.com/arkworks-rs/spongefish", rev = "c9f6aa72091f14442d24f6950178ab8c22269469" }
thiserror = "2.0"
rayon = "1.11"
blake3 = "1.5"

[patch.crates-io]
ark-crypto-primitives = { git = "https://github.com/dmpierre/crypto-primitives.git", branch = "dev/blake3" }