[package]
name = "argus-examples"
version = "0.1.0"
edition = "2024"
default-run = "argus-examples"

[dependencies]
ia-core = { path = "../ia-core" }
dsfs = { path = "../dsfs" }
live-channel = { path = "../live-channel" }

ark-ff.workspace = true
ark-ec.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
ark-bls12-381.workspace = true
ark-poly.workspace = true
ark-curve25519.workspace = true
spongefish = { workspace = true, features = ["ark-ec", "ark-ff", "curve25519-dalek", "derive"] }
ark-crypto-primitives = { version = "0.5.0", features = ["crh", "merkle_tree"] }
curve25519-dalek = { version = "4", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"