[package]
name = "warp"
version = "0.1.0"
edition = "2021"

[dependencies]
ia-core = { path = "../ia-core" }
ark-ff.workspace = true
ark-poly.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
ark-relations.workspace = true
ark-r1cs-std.workspace = true
ark-crypto-primitives.workspace = true
ark-codes.workspace = true
spongefish = { workspace = true, features = ["ark-ff"] }
thiserror.workspace = true
rayon.workspace = true
blake3.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
nohash-hasher = "0.2"

[dev-dependencies]
ark-bls12-381.workspace = true
dsfs = { path = "../dsfs" }
